Template da página de playlist por gênero

--- a/playlists.html
+++ b/playlists.html
@@ -31,15 +31,56 @@
                 <select name="search"  class="search" id="search">
                     <option value="" disabled selected></option>
                     <option value="Playlists">Playlists</option>
-                    <option value="Pop">Pop</option>
-                    <option value="Rock">Rock</option>
-                    <option value="Eletrônica">Eletrônica</option>
+                    <option value="Artistas">Artistas</option>
+                    <option value="Musicas">Músicas</option>
                 </select>
 
             </div>
 
+           
+
             <div class="content">
+                <h1>As playlists mais tocadas do gênero Pop</h1>
+
+                <div class="frames">
+                    <div class="frame">
+                        <img src="documents/images/photoMusic.jpg" alt="">
+                        <button><img src="documents/images/botao-play (1).png" alt=""></button>
+                        <p>Playlist</p>
+                    </div>
+
+                    <div class="frame">
+                        <img src="documents/images/photoMusic.jpg" alt="">
+                        <button><img src="documents/images/botao-play (1).png" alt=""></button>
+                        <p>Playlist</p>
+                    </div>
+
+                    <div class="frame">
+                        <img src="documents/images/photoMusic.jpg" alt="">
+                        <button><img src="documents/images/botao-play (1).png" alt=""></button>
+                        <p>Playlist</p>
+                    </div>
+
+                    <div class="frame">
+                        <img src="documents/images/photoMusic.jpg" alt="">
+                        <button><img src="documents/images/botao-play (1).png" alt=""></button>
+                        <p>Playlist</p>
+                    </div>
+
+                    <div class="frame">
+                        <img src="documents/images/photoMusic.jpg" alt="">
+                        <button><img src="documents/images/botao-play (1).png" alt=""></button>
+                        <p>Playlist</p>
+                    </div>
+
+                    <div class="frame">
+                        <img src="documents/images/photoMusic.jpg" alt="">
+                        <button><img src="documents/images/botao-play (1).png" alt=""></button>
+                        <p>Playlist</p>
+                    </div>
+                </div>
                 
+
             </div>
  
         </div>
