--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Olá Mundo!</h1>
     <div id="tracks"></div>
 
-    <script src="index.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
